nginx-simple/ngx-svc.yaml
#k expose deploy ngx-dep --port=80 --target-port=80
apiVersion: v1
kind: Service
metadata:
  name: ngx-svc
spec:
  type: NodePort
  selector:
    matchLabels:
      app: ngx-dep

  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ngx-dep
